Tracklist now fits into the view and if theres overflow it will scroll -> to fixed

--- a/webapp/src/style/style.less
+++ b/webapp/src/style/style.less
@@ -29,8 +29,9 @@
 }
 
 span.trackButton {
+	font-size: 0.9em;
 	width: 100%;
-	height: 20px;
+	height: 15px;
 	float: left;
 	clear: left;
 	padding: 10px;
@@ -53,6 +54,7 @@ span.trackButton.active {
 }
 
 #tracks {
-	width: 100% - 5px;
-	height: 500px;
+	width: 100%;
+	height: ~"calc(100% - 50px)";
+	overflow: scroll;
 }
